--- a/merger/README
+++ b/merger/README
@@ -2,4 +2,4 @@ Code for merging all the problem data into one source
 
 Last approximate scrape time (for likes, acceptance, new problems added): 3/21/2022
 
-Some partial files may have been left out of the commit
+Final problem list in `problem_list_complete.csv`, others are only temps
